feat: Port Structures (#317)
* feat: Holystone Sphere ported

* feat: Bronze and Gold structures ported